se agrego carpeta de Manejo-css

--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -15,3 +15,7 @@ h2{
     text-align: right;
     color: #a9a9a9;
 }
+
+.t3{
+font-family: 'Work Sans'; sans-serif;text-decoration: line-through;
+}
